--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -16,3 +16,15 @@ button.btn-success {
 .dropdown-item:hover, .dropdown-item:focus{
 	background-color: gray;
 }
+
+.page-header {
+	position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.page-body {
+  display:block;
+  width: 100%;
+  margin-top: 105px;
+}
