--- a/client/src/navigation/Nav/styleNav.scss
+++ b/client/src/navigation/Nav/styleNav.scss
@@ -13,10 +13,17 @@ nav.navbar {
     width: 100%;
 
     .nav-item.brand-logo {
-      flex: 1 30%;
-      img {
-        width: 75px; 
+      flex: 1 20;
+      @media (min-width: 768px){
+        flex: 1 30%;
       }
+      
+      img {
+        width: 45px;
+        @media (min-width: 768px){
+          width:75px;
+        } 
+      } 
     }
     .nav-item.title {
       flex: 1 40%;
@@ -26,7 +33,10 @@ nav.navbar {
       h1 {
         text-align: center;
         font-weight: 600;
-        font-size: 3rem;
+        font-size: 2rem;
+        @media (min-width: 768px){
+          font-size: 3rem;
+        }
       }
     }
 
