--- a/client/src/components/Tile/stylesTile.scss
+++ b/client/src/components/Tile/stylesTile.scss
@@ -1,3 +1,10 @@
+
+@media (min-width: 768px){
+  .card{
+      width: 35%;
+  }
+}
+
 .tile-wrapper {
   display: flex;
   justify-content: center;
@@ -8,5 +15,6 @@
 
   .card-title{
     font-size: 30px;
+    text-align: center;
   }
 }
