--- a/client/src/components/Plant/stylePlant.scss
+++ b/client/src/components/Plant/stylePlant.scss
@@ -10,7 +10,15 @@ div.thumbnail {
   .plant-card.card {
     width: 100%;
     padding:10px 15px 10px 10px;
+    justify-content: center;
+    align-items: center;
+    
+    @media(min-width: 768px){
+      justify-content: left;
+      align-items: flex-start;
+    }
   }
+
   .card.hollow{
     border: none;
     background-color: transparent;
@@ -19,11 +27,24 @@ div.thumbnail {
     position: relative;
     padding-left: 5px;
     background-color: #b8e986;
-
-
+    @media(min-width: 768px){
+        height: 255px;
+        // width: 255px;;
+      }
+  
     img {
+      @media (min-width: 576px) {
+        width: 100%;
+        // height: 65vw;
+      }
+
       @media(min-width: 768px){
-        height: 350px;
+        height: 100%;
+        width: 100%;;
+      }
+
+      @media(min-width: 992px){
+        height: inherit;
       }
 
     }
@@ -37,6 +58,7 @@ div.thumbnail {
       text-align: center;
       background-color: #b8e986;
       height: 100%;
+      width:100%;
 
       .title-overlay-wrapper {
         height: 100%;
@@ -55,18 +77,30 @@ div.thumbnail {
   }
 
   .plant-body{
+    padding-left: 10px;
+    @media(min-width: 768px){
+      padding-left: 0px;
+    }
     .plant-header {
       font-weight: 600;
+      text-align: center;
+      @media(min-width: 576px){
+        text-align: left;
+      }
       @media(min-width: 768px){
         margin-bottom: 10px;
-        text-align: left
       }
     }
     .plant-subheader {
+      font-style: italic;
       font-size: 18px;
       padding: 10px 0;
       background-color: transparent;
       border-bottom: none;
+      text-align: center;
+      @media(min-width: 576px){
+        text-align: left;
+      }
     }
     .plant-descr {
       font-size: 16px;
