--- a/client/src/pages/HomePlants/styleHomePlants.scss
+++ b/client/src/pages/HomePlants/styleHomePlants.scss
@@ -1,5 +1,6 @@
 .plant-directory-home-page{
   .plant-list {
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -7,16 +8,57 @@
     .plant-list-item {
       list-style-type: none;
       display:flex;
+      flex:  0 1 100%;
+      
+      @media(min-width: 576px){
+        flex:  0 1 50%;
+      }
       @media(min-width: 768px){
-        flex: 1 33%;
+        flex:  0 1 50%;
+      }
+      @media(min-width: 992px){
+        flex:  0 1 33%;
       }
     }
 
+
+
     li.plant-list-item.ChineseMoneyPlant, li.plant-list-item.AlocasiaPolly {
-      flex:  1 100%;
+      @media(min-width: 576px){
+        flex:  0 1 60%;
+      }
       @media(min-width: 768px){
         flex:  0 1 65%;
       }
+      @media(min-width: 992px){
+        flex:  0 1 65%;
+      }
+      img{
+        @media(min-width: 576px){
+          
+          height: 157px;
+        }
+        @media(min-width: 768px){
+          height: 100%;
+        }
+      }
+    }
+    li.plant-list-item.PandaPlant, li.plant-list-item.ZigZagCactus  {
+      flex: 1;
+      // @media(min-width: 576px){
+      //   flex:  0 1 40%;
+      // }
+
+      // @media(min-width: 768px){
+      //   flex:  0 1 35%;
+      // }
+      
+      // img{
+      //   @media(min-width: 576px){
+          
+      //     height: initial;
+      //   }
+      // }
     }
   }
 }
